[gd_scene load_steps=11 format=3 uid="uid://bdjuf6v2hsp63"]

[ext_resource type="Script" uid="uid://dkk3uwfryysa1" path="res://characters/dialouge.gd" id="1_o3n0o"]
[ext_resource type="PackedScene" uid="uid://brj4lfbi78pgk" path="res://misc/trigger.tscn" id="2_5yobx"]
[ext_resource type="Script" uid="uid://bhm3yrdex0vjq" path="res://quest_library/inventory/inventory_data.gd" id="2_w3xx4"]
[ext_resource type="Script" uid="uid://cmggf10ug5sb1" path="res://quest_library/inventory/slot_data.gd" id="3_i6y8x"]
[ext_resource type="Resource" uid="uid://dxlxohcqm575q" path="res://quest_library/item/items/test_ammo.tres" id="4_2rvo2"]

[sub_resource type="Resource" id="Resource_547u5"]
script = ExtResource("3_i6y8x")
item_data = ExtResource("4_2rvo2")
quantity = 120

[sub_resource type="Resource" id="Resource_3isrw"]
script = ExtResource("2_w3xx4")
slot_datas = Array[ExtResource("3_i6y8x")]([SubResource("Resource_547u5"), null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ti8rw"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6uqnu"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2e2hp"]

[node name="bean" type="CharacterBody3D" groups=["DialougeHolder", "actor", "external_inventory", "static"]]
axis_lock_angular_y = true
script = ExtResource("1_o3n0o")
Name = "bean"
inventory = SubResource("Resource_3isrw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ti8rw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_6uqnu")

[node name="trigger" parent="." instance=ExtResource("2_5yobx")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.0654718, 1.02487)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
max_speed = 5.0
debug_enabled = true

[node name="Node3D" type="Node3D" parent="."]

[node name="Node3D2" type="Node3D" parent="." groups=["DialougeHolder", "actor", "external_inventory", "static"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00937766, 0.562369, 0.999132)

[node name="Node3D3" type="Node3D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="POI_area" type="Area3D" parent="."]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="POI_area"]
shape = SubResource("SphereShape3D_2e2hp")

[node name="fear_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="quest_checker" type="Timer" parent="."]
wait_time = 0.1

[node name="start_timer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true
autostart = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.572653, 0.249058)

[connection signal="interact" from="trigger" to="." method="_on_trigger_interact"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="fear_timer" to="." method="_on_fear_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="quest_checker" to="." method="_on_quest_checker_timeout"]
[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]
